# TreeFS

./: CMakeLists.txt  LICENSE  README.md
src/: command.c  command.h  main.c  test.c  test.h  tool_core.c  tool_core.h
src/tfs/: treefs.c  treefs.h
